K8/qa/command-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: speech-command-http-api-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    # cert-manager.io/issuer: letsencrypt
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
    - hosts:
      - kubernetes.docker.com
      secretName: logcorner-ingress-tls
  rules:
    - host: kubernetes.docker.com
      http:
        paths:
          - path: /speech-command-http-api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: speech-command-http-api-service
                port:
                  number: 80
          # - path: /swagger(/|$)(.*)
            # pathType: Prefix
            # backend:
              # service:
                # name: speech-command-http-api-service
                # port:
                  # number: 80
